changed future tense to present tense in the use cases

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1785,7 +1785,7 @@ capture the full semantics, the rest is specified using some informal first-orde
 required to satisfy both OWL and FOL axioms. When solving reasoning tasks over either SKOS or PROV ontologies, OWL reasoners are not able to consider the 
 FOL axioms. Hence, the information contained in these axioms is lost.
 
-DOL will allow the user to replace such informal annotations by formal axioms in a suitable ontology language. The relation between the 
+DOL allows the user to replace such informal annotations by formal axioms in a suitable ontology language. The relation between the 
 OWL ontology and the FOL axioms is that of a heterogeneous import. In the result, both the OWL and the FOL axioms are amenable to e.g. automated consistency 
 checks and theorem proving. Hence, all available information can be used in the reasoning process.
 
@@ -1799,8 +1799,8 @@ domain ontologies; further, watered-down versions of the foundational ontologies
 development of domain ontologies, be this as is, in an even less expressive version (e.g. a DOLCE-lite in OWL 2 EL), or only a relevant subset thereof (e.g., only 
 the branch of endurants). A sample orchestration of interactions between the foundational and domain ontologies in various languages is depicted in the figure below. 
 
-DOL will provide the framework for integrating different domain ontologies, aligning these to foundational ontologies [Alignment1-2] and 
-combining the aligned ontologies into a coherent integrated ontology -- even across different ontology languages. Thus, DOL will enable 
+DOL  provides the framework for integrating different domain ontologies, aligning these to foundational ontologies [Alignment1-2] and 
+combining the aligned ontologies into a coherent integrated ontology -- even across different ontology languages. Thus, DOL  enables 
 ontology developers to utilize the complete, and most expressive, foundational ontologies for ontology integration and validation purposes. 
 
 
@@ -1813,7 +1813,7 @@ be required for all usage scenarios. Often, for a given knowledge representation
 ontologies needs to be integrated, so a comprehensive integration would be both unfeasible and unwieldy. Hence, parts (modules) of these ontologies are obtained 
 by selecting the concepts and relationships (roles) relevant for the intended application. An integrated version will then be based on these excerpts from the original 
 ontologies (i.e., modules). For example, the Juvenile Rheumatoid Arthritis ontology JRAO has been created using modules from the NCI thesaurus and GALEN 
-medical ontology. (See \ednote{CL: can we please have a vector graphic here?}\fref{JRAO}) DOL will support the description of such subsets (modules) of ontologies, as well as their alignment and integration.
+medical ontology. (See \ednote{CL: can we please have a vector graphic here?}\fref{JRAO}) DOL  supports the description of such subsets (modules) of ontologies, as well as their alignment and integration.
 
 
 \begin{figure}[htbp]
@@ -1845,7 +1845,7 @@ The languages for representing the metadata or ontology, for representing the br
 they need to be orchestrated and handled smoothly in the system, be this for data analytics for large enterprises, for formulating policies, or in silico biology in the 
 sciences. 
 
-DOL will provide the framework for expressing such bridge rules in a systematic way, maintaining these, and building tools for them. 
+DOL  provides the framework for expressing such bridge rules in a systematic way, maintaining these, and building tools for them. 
 
 \section{Use Case Onto-5: Verification of rules translating Dublin Core into PROV}
 The Dublin Core Metadata terms, which have been formalized as an RDF Schema vocabulary, developed initially by the digital library community, are less 
@@ -1858,7 +1858,7 @@ The Dublin Core to PROV ontology translation%
   is expressed partly by a symbol mapping and partly by FOL rules. These FOL rules are implemented by CONSTRUCT patterns in the SPARQL RDF query language.%
 \footnote{E.g., \url{http://www.w3.org/TR/2013/NOTE-prov-dc-20130430/\#dct-creator}} 
 SPARQL has a formal specification of the evaluation semantics of its algebraic expressions, which is different from the model-theoretic semantics of the OWL and RDFS languages; nevertheless SPARQL CONSTRUCT is a popular and immediately executable syntax for expressing translation rules between ontologies in RDF-based languages in a subset of FOL.
-DOL will not only support the reuse of the existing Dublin Core RDFS and PROV OWL ontologies as modules of a distributed ontology, but it will also be able to support the description of the FOL translation rules in a sufficiently expressive ontology language, e.g. Common Logic, and thus enable formal verification of the translation from Dublin Core to PROV.
+DOL  not only supports the reuse of the existing Dublin Core RDFS and PROV OWL ontologies as modules of a distributed ontology, but it is also able to support the description of the FOL translation rules in a sufficiently expressive ontology language, e.g. Common Logic, and thus enable formal verification of the translation from Dublin Core to PROV.
 
 \section{Use case Spec-1: Specification Refinements}
 Especially in safety-critical areas such as medical systems, the automotive industry, avionics and the aerospace industry, but also for microprocessor design, often 
@@ -1869,14 +1869,14 @@ There are numerous specification formalisms in use, including the OMG's SysML la
 changed (e.g. from a specification to a programming language, or from a temporal logic to a state machine). For each of these formalisms, notions of refinement 
 have been defined and implemented. However, the lack of a standardized, logically sound language and methodology for such refinement hinders interoperability 
 among different development efforts and the reuse of refinements.
-DOL will provide the capability to represent refinement that is equally applicable to all DOL-conforming logical languages, and that will 
-cover at least the most relevant of the industrial use cases of specification refinement.
+DOL  provides the capability to represent refinement that is equally applicable to all DOL-conforming logical languages, and that  
+covers at least the most relevant of the industrial use cases of specification refinement.
 
 \section{Use case Spec-2: Modularity of Specifications}
 In the context of use case Spec-1, often specifications become so large that it is necessary to structure them in a modular way, both for human readability, 
 maintainability, and for more efficient tool support. The lack of a standard for such modular structuring hinders interoperability among different development efforts 
 and the reuse of specifications.
-DOL will provide a notion of structured modular specification that is equally applicable to all DOL-conforming logical languages.
+DOL  provides a notion of structured modular specification that is equally applicable to all DOL-conforming logical languages.
 	
 \section{Use case Model-1: Coherent semantics for multi-language models}	
 Often a single problem area within a given domain must be described using several formalisms, due to user community requirements, expressiveness, tool support 
@@ -1898,7 +1898,7 @@ With DOL, one can e.g.
 \item 	extract sub-modules covering specific aspects, and
 \item 	specify the OWL version to be an approximation of the Common Logic version (using a heterogeneous interpretation of OMSs).
 \end{itemize}
-Note that the last point does not specify what information is lost in the approximation. Indeed, DOL will provide the means to specify requirements on the approximation, e.g. that it maximally preserves the information. 
+Note that the last point does not specify what information is lost in the approximation. Indeed, DOL provides the means to specify requirements on the approximation, e.g. that it maximally preserves the information. 
 
 Use case Model-2: Consistency among UML diagrams of different types
 A typical UML model involves diagrams of different types. Such UML models may have intrinsic errors because diagrams of different types may specify conflicting 
@@ -1920,8 +1920,8 @@ A problem is a lack of reusability of refinements: Consider a controller for an 
 sequence diagrams and OCL constraints. Assume further that this model is not directly implemented, but first refined to a UML behavior state machine (which then 
 can be automatically or semi-automatically transformed into some implementation using standard UML tools). However, there is no standardized language to 
 express, document and maintain the refinement relation itself (UML only allows very simple refinements, namely between state machines). This hinders both the 
-reuse of such refinements in different contexts, as well as the interoperability of tools proving such refinements to be correct. DOL will 
-address these problems by providing a standardized notation with formal semantics for such refinements. Refinements expressed in this language could e.g. be 
+reuse of such refinements in different contexts, as well as the interoperability of tools proving such refinements to be correct. DOL  
+addresses these problems by providing a standardized notation with formal semantics for such refinements. Refinements expressed in this language could e.g. be 
 parameterized and reused in different contexts.
 
 \section{Summary of use cases}
@@ -1930,10 +1930,10 @@ formal representations leads to interoperability challenges. There are ad-hoc so
 practice. However, there is no standardized approach or representation metalanguage to enable more accurate and consistent alignment, integration, and mapping 
 among these specifications and the tools that implement them.
 
-In the next sections, we will detail the metalanguage DOL for dealing with this variety of formalisms, with syntax, well-defined semantics and model theory. DOL 
- will distill best practices of modularity and metarelations (such as refinement and alignment) across the three areas of ontology design, formal 
-specification, and model-driven development. It will lead to the ability to specify the basis for formal interoperability even among heterogeneous OMSs. DOL will help to solve the problems described in the use cases above. It also will foster the development of OMS libraries, tools and workflows that 
-enable a better exchange and reuse of OMSs. Eventually, this will also lead to better, easier developed and maintained systems based on these OMS
+In the next sections, we discuss  the metalanguage DOL, its features that enable the support of a variety of formalisms, with syntax, well-defined semantics and model theory. DOL 
+distills best practices of modularity and metarelations (such as refinement and alignment) across the three areas of ontology design, formal 
+specification, and model-driven development. It provides the ability to specify the basis for formal interoperability even among heterogeneous OMSs. DOL enables the solutions of the problems described in the use cases above. It also enables the development of OMS libraries, tools and workflows that 
+allow  a better exchange and reuse of OMSs. Eventually, this will also lead to better, easier developed and maintained systems based on these OMS
 
 
 \chapter{Design Overview}
