--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1900,7 +1900,7 @@ With DOL, one can e.g.
 \end{itemize}
 Note that the last point does not specify what information is lost in the approximation. Indeed, DOL provides the means to specify requirements on the approximation, e.g. that it maximally preserves the information. 
 
-Use case Model-2: Consistency among UML diagrams of different types
+\section{Use case Model-2: Consistency among UML diagrams of different types}
 A typical UML model involves diagrams of different types. Such UML models may have intrinsic errors because diagrams of different types may specify conflicting 
 requirements. Typical questions that arise in this context are e.g.
 
@@ -1933,7 +1933,7 @@ among these specifications and the tools that implement them.
 In the next sections, we discuss  the metalanguage DOL, its features that enable the support of a variety of formalisms, with syntax, well-defined semantics and model theory. DOL 
 distills best practices of modularity and metarelations (such as refinement and alignment) across the three areas of ontology design, formal 
 specification, and model-driven development. It provides the ability to specify the basis for formal interoperability even among heterogeneous OMSs. DOL enables the solutions of the problems described in the use cases above. It also enables the development of OMS libraries, tools and workflows that 
-allow  a better exchange and reuse of OMSs. Eventually, this will also lead to better, easier developed and maintained systems based on these OMS
+allow  a better exchange and reuse of OMSs. Eventually, this will also lead to better, easier developed and maintained systems based on these OMS.
 
 
 \chapter{Design Overview}
@@ -2055,7 +2055,7 @@ constructs of DOL. Details can be found in clause~\ref{c:abstract-syntax}.
 DOL gives interoperability a formal grounding and makes heterogeneous OMSs and services based on them amenable to checking of coherence (e.g. consistency, conservativity, intended consequences, and compliance). OMS languages are declarative languages for making ontological distinctions formally precise. They are distinguished by the following features:
 
 \begin{description}
-\item[Logic] Most commonly, OMS languages are based on a description logic or some other subset of first order logic, but in some cases, also higher-order, modal, paraconsistent and other logics are used.
+\item[Logic] Most commonly, OMS languages are based on a description logic or some other subset of first-order logic, but in some cases, also higher-order, modal, paraconsistent and other logics are used.
 \item[Modularity] means of structuring an OMS into reusable parts, reusing parts of other OMSs, mapping imported symbols to those in the importing OMS, and asserting additional properties about imported symbols.
 \item[Annotation] means of attaching human-readable descriptions to OMS symbols, addressing knowledge engineers and service developers, but also end users of OMS-based services.\ednote{TODO Christoph: reformulate. DOL enables the use of annotations}
 \end{description}
