--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1781,12 +1781,12 @@ informal annotations means that these are not available for machine processing.
 Another example of this problem is the following: For formally representing concept schemes (including taxonomies, thesauri and classification schemes) and 
 provenance information there are the two W3C standards SKOS (Simple Knowledge Organization System) and PROV, as well as \ednote{CL: Did we mean something like “ISO 12345” here, i.e.\ some specific ISO standard that we reference by number?}ISO and other domain-specific 
 standards for metadata representation. The semantics for the SKOS and PROV languages are largely specified as OWL ontologies; however, as OWL cannot 
-capture the full semantics, the rest is specified using some informal first-order rules . In other words, valid instance models that use SKOS or PROV may be 
+capture the full semantics, the rest is specified using some informal first-order rules. In other words, valid instance models that use SKOS or PROV may be 
 required to satisfy both OWL and FOL axioms. When solving reasoning tasks over either SKOS or PROV ontologies, OWL reasoners are not able to consider the 
 FOL axioms. Hence, the information contained in these axioms is lost.
 
 DOL allows the user to replace such informal annotations by formal axioms in a suitable ontology language. The relation between the 
-OWL ontology and the FOL axioms is that of a heterogeneous import. In the result, both the OWL and the FOL axioms are amenable to e.g. automated consistency 
+OWL ontology and the FOL axioms is that of a heterogeneous import. In the result, both the OWL and the FOL axioms are amenable to, e.g., automated consistency 
 checks and theorem proving. Hence, all available information can be used in the reasoning process.
 
 \section{Use Case Onto-2: Ontology integration by means of a foundational ontology}
@@ -1796,7 +1796,7 @@ foundational ontology (e.g., DOLCE or BFO), which can be used to harmonize diffe
 ontologies typically rely on expressive ontology languages (e.g., Common Logic), while domain ontologies may be represented in languages that are optimized for 
 performance (e.g., OWL EL). For this reason, currently the role of the foundational ontology is mainly to provide a conceptual framework that may be reused by the 
 domain ontologies; further, watered-down versions of the foundational ontologies in OWL (like DOLCE-lite or the OWL version of BFO) are used as basis for the 
-development of domain ontologies, be this as is, in an even less expressive version (e.g. a DOLCE-lite in OWL 2 EL), or only a relevant subset thereof (e.g., only 
+development of domain ontologies, be this as is, in an even less expressive version (e.g., a DOLCE-lite in OWL 2 EL), or only a relevant subset thereof (e.g., only 
 the branch of endurants). A sample orchestration of interactions between the foundational and domain ontologies in various languages is depicted in the figure below. 
 
 DOL  provides the framework for integrating different domain ontologies, aligning these to foundational ontologies [Alignment1-2] and 
@@ -1807,7 +1807,7 @@ ontology developers to utilize the complete, and most expressive, foundational o
  
 
 \section{Use Case Onto-3: Module extraction from large ontologies}
-Especially in the biomedical domain, ontologies tend to become very large (e.g. SNOMED CT, FMA) with over 100000 concepts and relationships. Yet, none of 
+Especially in the biomedical domain, ontologies tend to become very large (e.g., SNOMED CT, FMA) with over 100000 concepts and relationships. Yet, none of 
 these ontologies covers all aspects of a domain, and frequently provide coverage at various levels of specificity, with excessive detail in some areas that may not 
 be required for all usage scenarios. Often, for a given knowledge representation problem in industry, only relevant knowledge from two such large reference 
 ontologies needs to be integrated, so a comprehensive integration would be both unfeasible and unwieldy. Hence, parts (modules) of these ontologies are obtained 
@@ -1863,7 +1863,7 @@ DOL  not only supports the reuse of the existing Dublin Core RDFS and PROV OWL o
 \section{Use case Spec-1: Specification Refinements}
 Especially in safety-critical areas such as medical systems, the automotive industry, avionics and the aerospace industry, but also for microprocessor design, often 
 a formal software and hardware development process is used in order to ensure the correct functioning of systems. Typically, a requirement specification is refined 
-into a design specification and then an implementation, often involving several intermediate steps (see e.g. the V-model [V-model], although this does not require 
+into a design specification and then an implementation, often involving several intermediate steps (see, e.g. the V-model [V-model], although this does not require 
 formal specification).
 There are numerous specification formalisms in use, including the OMG's SysML language; moreover, often during development, the formalism needs to be 
 changed (e.g. from a specification to a programming language, or from a temporal logic to a state machine). For each of these formalisms, notions of refinement 
@@ -1891,18 +1891,18 @@ One example is the OMG Date-Time Vocabulary (DTV). DTV has been formulated in di
 \item 	OWL: ontology developers and users
 \item 	Common Logic: (foundational) ontology developers and users
 \end{itemize}
-With DOL, one can e.g.
+With DOL, one can, e.g.,
 \begin{itemize}
 \item 	formally relate the different formalizations used for DTV, relate the different formalizations using translations,
 \item 	check consistency across the different formalizations (using suitable tools),
 \item 	extract sub-modules covering specific aspects, and
 \item 	specify the OWL version to be an approximation of the Common Logic version (using a heterogeneous interpretation of OMSs).
 \end{itemize}
-Note that the last point does not specify what information is lost in the approximation. Indeed, DOL provides the means to specify requirements on the approximation, e.g. that it maximally preserves the information. 
+Note that the last point does not specify what information is lost in the approximation. Indeed, DOL provides the means to specify requirements on the approximation, e.g., that it maximally preserves the information. 
 
 \section{Use case Model-2: Consistency among UML diagrams of different types}
 A typical UML model involves diagrams of different types. Such UML models may have intrinsic errors because diagrams of different types may specify conflicting 
-requirements. Typical questions that arise in this context are e.g.
+requirements. Typical questions that arise in this context are, e.g.,
 
 \begin{itemize}
 \item	  whether the sequential composition of actions in an interaction diagram is justified by an accompanying OCL specification,
@@ -1912,7 +1912,7 @@ requirements. Typical questions that arise in this context are e.g.
 \end{itemize}
 Such questions are currently hard to answer in a systematic manner. One method to answer these questions and find such errors is a check for semantic 
 consistency. Under some restrictions, the proof of semantic consistency can be (at least partially) performed using model-checking tools like Hugo/RT [HugoRT]. 
-Once a formal semantics for the different diagram types has been chosen (see e.g. [HetUML]), it is possible to use DOL to specify in which 
+Once a formal semantics for the different diagram types has been chosen (see, e.g. [HetUML]), it is possible to use DOL to specify in which 
 sense the diagrams need to be consistent, and check this by suitable tools.
 
 \section{Use case Model-3: Refinements between UML diagrams of different types, and their reuse}
@@ -1921,7 +1921,7 @@ sequence diagrams and OCL constraints. Assume further that this model is not dir
 can be automatically or semi-automatically transformed into some implementation using standard UML tools). However, there is no standardized language to 
 express, document and maintain the refinement relation itself (UML only allows very simple refinements, namely between state machines). This hinders both the 
 reuse of such refinements in different contexts, as well as the interoperability of tools proving such refinements to be correct. DOL  
-addresses these problems by providing a standardized notation with formal semantics for such refinements. Refinements expressed in this language could e.g. be 
+addresses these problems by providing a standardized notation with formal semantics for such refinements. Refinements expressed in this language could, e.g., be 
 parameterized and reused in different contexts.
 
 \section{Summary of use cases}
@@ -2115,7 +2115,7 @@ as well as complex mappings and relations between OMSs.
 \section{DOL enables expression of logically heterogeneous OMSs and literal reuse of existing OMSs.}
 DOL is a mechanism for expressing logically heterogeneous OMSs. It can be used to combine sentences and structured OMSs expressed in different conforming OMS languages
 and logics into single documents or modules. With DOL, sentences or structured OMSs of previously existing OMSs in
-conforming languages can be reused by literally including them into a DOL OMS. A minimum of wrapping constructs and other annotations (e.g. for identifying the language of a sentence ) are provided. 
+conforming languages can be reused by literally including them into a DOL OMS. A minimum of wrapping constructs and other annotations (e.g., for identifying the language of a sentence ) are provided. 
 \todonote[author=Christoph
 Lange,date=D:201109201457+02'00',type=todo]{Figure out what this
   feedback item from Michael Grüninger (?) means: say that there
@@ -2428,7 +2428,7 @@ Correspondence       = CorrespondenceBlock
 CorrespondenceBlock  = 'correspondence-block' , [ RelationRef ] , [ Confidence ]<\CLnote[type=todo]{How do we say that at least one of these should be given?}>
                                                 { Correspondence } ;
 SingleCorrespondence = 'correspondence' , SymbolRef , [ RelationRef ] , [ Confidence ] ,
-                                          TermOrSymbolRef , [ CorrespondenceID ]<\CLnote[type=todo]{concrete syntax e.g. a = x, b my:similarTo y \%(correspond-b-to-y)\%, c my:similarTo 0.75 z}> ;
+                                          TermOrSymbolRef , [ CorrespondenceID ]<\CLnote[type=todo]{concrete syntax, e.g., a = x, b my:similarTo y \%(correspond-b-to-y)\%, c my:similarTo 0.75 z}> ;
 CorrespondenceID     = IRI ;
 SymbolRef            = IRI ;
 TermOrSymbolRef      = Term | SymbolRef ;
